// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aboveWidth returns the correct media query 1`] = `
@media screen and (min-width: 25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`atWidth returns the correct media query 1`] = `
@media screen and (min-width: 25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`belowWidth returns the correct media query 1`] = `
@media screen and (max-width: 25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`betweenWidths returns the correct media query 1`] = `
@media screen and (min-width: 25em) and (max-width: 56.25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;
